--- a/cx.html
+++ b/cx.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>Module cx</title>
+<title>cx</title>
 <style type="text/css" >
 /*
 Stylesheet for use with Docutils/rst2html.
@@ -1219,7 +1219,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">Module cx</h1>
+    <h1 class="title">cx</h1>
     <div class="row">
   <div class="three columns">
   <div id="global-links">
@@ -1265,9 +1265,9 @@ function main() {
   <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#benchmarkresults"
-    title="benchmarkresults = newSeq(0)"><wbr />benchmarkresults<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="benchmarkresults = newSeq(Natural(0))"><wbr />benchmarkresults<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxtmpfilenames"
-    title="cxtmpfilenames = newSeq(0)"><wbr />cxtmpfilenames<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxtmpfilenames = newSeq(Natural(0))"><wbr />cxtmpfilenames<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1417,7 +1417,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2018-10-15
+Latest      : 2018-10-19
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -1549,13 +1549,13 @@ Funding     : Here are three excellent reasons :
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
 <a id="benchmarkresults"></a>
-<dt><pre><span class="Identifier">benchmarkresults</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt><pre><span class="Identifier">benchmarkresults</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
 </dd>
 <a id="cxtmpfilenames"></a>
-<dt><pre><span class="Identifier">cxtmpfilenames</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt><pre><span class="Identifier">cxtmpfilenames</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1895,7 +1895,7 @@ coltype examples : &quot;red&quot;,&quot;blue&quot;,&quot;medium&quot;,&quot;dar
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">rmTmpFilenames</span><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
                       <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteDirEffect</span><span class="Other">,</span> <span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-iterates over each item of <cite>a</cite>.
+
 
 </dd>
 <a id="doInfo,"></a>
@@ -1920,12 +1920,7 @@ iterates over each item of <cite>a</cite>.
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">theEnd</span><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">IOError</span><span class="Other">,</span> <span class="Identifier">Exception</span><span class="Other">]</span><span class="Other">,</span>
               <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">,</span> <span class="Identifier">TimeEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-<p>loopy2</p>
-<p>the advanced version of loopy the simple for-loop template which also injects the loop counter xloopy if loopy2() was called with parameters if called without parameters xloopy will not be injected .</p>
-<pre class="listing"><span class="Identifier">loopy2</span><span class="Punctuation">(</span><span class="DecNumber">1</span><span class="Punctuation">,</span><span class="DecNumber">10</span><span class="Punctuation">)</span><span class="Punctuation">:</span>
-  <span class="Keyword">block</span><span class="Punctuation">:</span>
-     <span class="Identifier">printLnBiCol</span><span class="Punctuation">(</span><span class="Identifier">xloopy</span> <span class="Punctuation">,</span> <span class="StringLit">&quot;  The house is in the back.&quot;</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="StringLit">&quot;:&quot;</span><span class="Punctuation">,</span><span class="DecNumber">0</span><span class="Punctuation">,</span><span class="Identifier">false</span><span class="Punctuation">,</span><span class="Punctuation">{</span><span class="Punctuation">}</span><span class="Punctuation">)</span>
-     <span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;Some integer : &quot;</span> <span class="Operator">&amp;</span> <span class="Operator">$</span><span class="Identifier">getRndInt</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
+
 
 </dd>
 <a id="doFinish,"></a>
@@ -2121,7 +2116,7 @@ doByeBye<dl class="docutils"><dt>a simple end program routine do give some feedb
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-18 04:47:43 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-04 00:00:36 UTC</small>
       </div>
     </div>
   </div>
