--- a/cxglobal.html
+++ b/cxglobal.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>Module cxglobal</title>
+<title>cxglobal</title>
 <style type="text/css" >
 /*
 Stylesheet for use with Docutils/rst2html.
@@ -1219,7 +1219,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">Module cxglobal</h1>
+    <h1 class="title">cxglobal</h1>
     <div class="row">
   <div class="three columns">
   <div id="global-links">
@@ -1610,7 +1610,7 @@ Description : provides many basic utility functions required by other modules</p
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
 <a id="getcxTrueColorSetFlag"></a>
-<dt><pre><span class="Identifier">getcxTrueColorSetFlag</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="DecNumber">true</span></pre></dt>
+<dt><pre><span class="Identifier">getcxTrueColorSetFlag</span><span class="Other">:</span> <span class="Identifier">bool</span> <span class="Other">=</span> <span class="Identifier">true</span></pre></dt>
 <dd>
 
 
@@ -1973,7 +1973,7 @@ echo fmtx([&quot;&lt;10.2&quot;],123456)    ---&gt;  123,456.00</pre>
 
 </dd>
 <a id="showRune,string"></a>
-<dt><pre><span class="Keyword">proc</span> <span class="Identifier">showRune</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dt><pre><span class="Keyword">proc</span> <span class="Identifier">showRune</span><span class="Other">(</span><span class="Identifier">s</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">discardable</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
 showRune<pre>utility proc to show a single unicode char given in hex representation
 note that not all unicode chars may be available on all systems</pre>
@@ -2099,13 +2099,13 @@ doFlag<pre class="listing"><span class="Keyword">import</span> <span class="Iden
 <a id="stripper,string"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">stripper</span><span class="Other">(</span><span class="Identifier">str</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">string</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-iterates over each item of <cite>a</cite>.
+
 
 </dd>
 <a id="[],seq[T],Slice[U]"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">`[]`</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">;</span> <span class="Identifier">U</span><span class="Other">]</span><span class="Other">(</span><span class="Identifier">a</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span><span class="Other">;</span> <span class="Identifier">x</span><span class="Other">:</span> <span class="Identifier">Slice</span><span class="Other">[</span><span class="Identifier">U</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">T</span><span class="Other">]</span></pre></dt>
 <dd>
-&quot;is greater or equals&quot; operator. This is the same as <tt class="docutils literal"><span class="pre">y &lt;= x</span></tt>.
+
 
 </dd>
 <a id="fromCString,pointer,int"></a>
@@ -2574,7 +2574,7 @@ returns a colorpalette which can be used to iterate over</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-18 04:47:47 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-04 00:00:39 UTC</small>
       </div>
     </div>
   </div>
