--- a/cxprint.html
+++ b/cxprint.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>Module cxprint</title>
+<title>cxprint</title>
 <style type="text/css" >
 /*
 Stylesheet for use with Docutils/rst2html.
@@ -1219,7 +1219,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">Module cxprint</h1>
+    <h1 class="title">cxprint</h1>
     <div class="row">
   <div class="three columns">
   <div id="global-links">
@@ -1422,7 +1422,7 @@ Status      : stable
 
 License     : MIT opensource
 
-Latest      : 2018-10-18
+Latest      : 2018-11-04
 
 Compiler    : Nim &gt;= 0.19.x dev branch
 
@@ -2206,7 +2206,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-18 04:47:54 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-04 00:00:45 UTC</small>
       </div>
     </div>
   </div>
