--- a/cxstats.html
+++ b/cxstats.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>Module cxstats</title>
+<title>cxstats</title>
 <style type="text/css" >
 /*
 Stylesheet for use with Docutils/rst2html.
@@ -1219,7 +1219,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">Module cxstats</h1>
+    <h1 class="title">cxstats</h1>
     <div class="row">
   <div class="three columns">
   <div id="global-links">
@@ -1372,7 +1372,7 @@ Description : provides functions pertaining to statistcs and calculations</pre>
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-18 04:47:55 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-04 00:00:46 UTC</small>
       </div>
     </div>
   </div>
