--- a/cxtime.html
+++ b/cxtime.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>Module cxtime</title>
+<title>cxtime</title>
 <style type="text/css" >
 /*
 Stylesheet for use with Docutils/rst2html.
@@ -1219,7 +1219,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">Module cxtime</h1>
+    <h1 class="title">cxtime</h1>
     <div class="row">
   <div class="three columns">
   <div id="global-links">
@@ -1268,7 +1268,7 @@ function main() {
   <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxtimerresults"
-    title="cxtimerresults = newSeq(0)"><wbr />cxtimerresults<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxtimerresults = newSeq(Natural(0))"><wbr />cxtimerresults<span class="attachedType" style="visibility:hidden"></span></a></li>
 
   </ul>
 </li>
@@ -1410,7 +1410,7 @@ function main() {
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
 <a id="cxtimerresults"></a>
-<dt><pre><span class="Identifier">cxtimerresults</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt><pre><span class="Identifier">cxtimerresults</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1491,7 +1491,7 @@ Format yyyy
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">compareDates</span><span class="Other">(</span><span class="Identifier">startDate</span><span class="Other">,</span> <span class="Identifier">endDate</span><span class="Other">:</span> <span class="Identifier">string</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma">
     <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-&quot;is greater or equals&quot; operator. This is the same as <tt class="docutils literal"><span class="pre">y &lt;= x</span></tt>.
+
 
 </dd>
 <a id="plusDays,string,int"></a>
@@ -1761,7 +1761,7 @@ Format yyyy
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-18 04:47:48 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-04 00:00:40 UTC</small>
       </div>
     </div>
   </div>
