--- a/cxtruecolor.html
+++ b/cxtruecolor.html
@@ -16,7 +16,7 @@
 <link href='https://fonts.googleapis.com/css?family=Source+Code+Pro:400,500,600' rel='stylesheet' type='text/css'/>
 
 <!-- CSS -->
-<title>Module cxtruecolor</title>
+<title>cxtruecolor</title>
 <style type="text/css" >
 /*
 Stylesheet for use with Docutils/rst2html.
@@ -1219,7 +1219,7 @@ function main() {
 <body onload="main()">
 <div class="document" id="documentId">
   <div class="container">
-    <h1 class="title">Module cxtruecolor</h1>
+    <h1 class="title">cxtruecolor</h1>
     <div class="row">
   <div class="three columns">
   <div id="global-links">
@@ -1256,9 +1256,9 @@ function main() {
   <a class="reference reference-toplevel" href="#8" id="58">Vars</a>
   <ul class="simple simple-toc-section">
       <li><a class="reference" href="#cxTrueCol"
-    title="cxTrueCol = newSeq(0)"><wbr />cx<wbr />True<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxTrueCol = newSeq(Natural(0))"><wbr />cx<wbr />True<wbr />Col<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxRGB_2"
-    title="cxRGB = newSeq(0)"><wbr />cx<wbr />RGB<span class="attachedType" style="visibility:hidden"></span></a></li>
+    title="cxRGB = newSeq(Natural(0))"><wbr />cx<wbr />RGB<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#colorNumber38"
     title="colorNumber38 = 0"><wbr />color<wbr />Number38<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#colorNumber48"
@@ -1325,13 +1325,13 @@ function main() {
 <h1><a class="toc-backref" href="#8">Vars</a></h1>
 <dl class="item">
 <a id="cxTrueCol"></a>
-<dt><pre><span class="Identifier">cxTrueCol</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt><pre><span class="Identifier">cxTrueCol</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
 </dd>
 <a id="cxRGB_2"></a>
-<dt><pre><span class="Identifier">cxRGB</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span></pre></dt>
+<dt><pre><span class="Identifier">cxRGB</span> <span class="Other">=</span> <span class="Identifier">newSeq</span><span class="Other">(</span><span class="Identifier">Natural</span><span class="Other">(</span><span class="DecNumber">0</span><span class="Other">)</span><span class="Other">)</span></pre></dt>
 <dd>
 
 
@@ -1393,13 +1393,13 @@ function main() {
 <a id="color38,seq[string]"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">color38</span><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-unequal operator 
+
 
 </dd>
 <a id="color48,seq[string]"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">color48</span><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">inline</span><span class="Other">,</span> <span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-&quot;is greater&quot; operator. This is the same as <tt class="docutils literal"><span class="pre">y &lt; x</span></tt>.
+
 
 </dd>
 <a id="color3848,seq[string]"></a>
@@ -1460,7 +1460,7 @@ unequal operator
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">showCxTrueColorPalette2</span><span class="Other">(</span><span class="Other">)</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">OverflowError</span><span class="Other">,</span> <span class="Identifier">ValueError</span><span class="Other">,</span> <span class="Other">,</span> <span class="Identifier">IOError</span><span class="Other">]</span><span class="Other">,</span>
                                <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">WriteIOEffect</span><span class="Other">,</span> <span class="Identifier">RootEffect</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
-&quot;is greater&quot; operator. This is the same as <tt class="docutils literal"><span class="pre">y &lt; x</span></tt>.
+
 
 </dd>
 
@@ -1473,7 +1473,7 @@ unequal operator
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-10-18 04:47:52 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-04 00:00:44 UTC</small>
       </div>
     </div>
   </div>
