--- a/cxprint.html
+++ b/cxprint.html
@@ -1430,7 +1430,7 @@ OS          : Linux
 
 Description : provides most printing functions for the library
 
-Note        : some parts are experimental, the aim in the future will be
+Note        : some parts are experimental, the future aim will be
               
               one smart print function which handles any kind of demand for colors.</pre>
 </p>
@@ -2206,7 +2206,7 @@ forward declaration
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-11-04 00:00:45 UTC</small>
+        <small>Made with Nim. Generated: 2018-11-17 06:47:59 UTC</small>
       </div>
     </div>
   </div>
