--- a/cxutils.html
+++ b/cxutils.html
@@ -1405,7 +1405,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2018-10-01
+Latest      : 2018-12-02
 
 OS          : Linux
 
@@ -1948,7 +1948,7 @@ spiralBoxy2   uses boxy2
 <span class="Identifier">echo</span> <span class="StringLit">&quot;Hongkong - London&quot;</span>
 <span class="Identifier">echo</span> <span class="Identifier">distanceto</span><span class="Punctuation">(</span><span class="Punctuation">(</span><span class="FloatNumber">114.109497</span><span class="Punctuation">,</span><span class="FloatNumber">22.396427</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Punctuation">(</span><span class="Operator">-</span><span class="FloatNumber">0.126236</span><span class="Punctuation">,</span><span class="FloatNumber">51.500153</span><span class="Punctuation">)</span><span class="Punctuation">)</span> <span class="Punctuation">,</span> <span class="StringLit">&quot; km&quot;</span>
 <span class="Identifier">echo</span> <span class="Identifier">distanceto</span><span class="Punctuation">(</span><span class="Punctuation">(</span><span class="FloatNumber">114.109497</span><span class="Punctuation">,</span><span class="FloatNumber">22.396427</span><span class="Punctuation">)</span><span class="Punctuation">,</span><span class="Punctuation">(</span><span class="Operator">-</span><span class="FloatNumber">0.126236</span><span class="Punctuation">,</span><span class="FloatNumber">51.500153</span><span class="Punctuation">)</span><span class="Punctuation">)</span> <span class="Operator">/</span> <span class="FloatNumber">1.609345</span> <span class="Punctuation">,</span><span class="StringLit">&quot; miles&quot;</span>
-<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="DecNumber">2</span><span class="Punctuation">)</span></pre>
+<span class="Identifier">decho</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <a id="getEmojisSmall,"></a>
@@ -2031,7 +2031,7 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-11-17 06:47:50 UTC</small>
+        <small>Made with Nim. Generated: 2018-12-02 07:57:21 UTC</small>
       </div>
     </div>
   </div>
