--- a/cxutils.html
+++ b/cxutils.html
@@ -1931,7 +1931,7 @@ spiralBoxy2   uses boxy2
 <dd>
 <p>memCheck</p>
 <p>memCheck shows memory before and after a GC_FullCollect run</p>
-<p>set stats to true for full GC_getStatistics </p>
+<p>set stats to true for full GC_getStatistics @[1, 2, 4, 8, 16, 32]</p>
 
 
 </dd>
@@ -2031,7 +2031,7 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-12-02 07:57:21 UTC</small>
+        <small>Made with Nim. Generated: 2018-12-15 07:09:49 UTC</small>
       </div>
     </div>
   </div>
