--- a/cxutils.html
+++ b/cxutils.html
@@ -1329,6 +1329,8 @@ function main() {
     title="createSeqKatakana(): seq[string]"><wbr />create<wbr />Seq<wbr />Katakana<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqCJK%2C"
     title="createSeqCJK(): seq[string]"><wbr />create<wbr />Seq<wbr />CJK<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#createSeqFractur%2C"
+    title="createSeqFractur(): seq[string]"><wbr />create<wbr />Seq<wbr />Fractur<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqIching%2C"
     title="createSeqIching(): seq[string]"><wbr />create<wbr />Seq<wbr />Iching<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#createSeqApl%2C"
@@ -1405,7 +1407,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2018-12-02
+Latest      : 2018-12-18
 
 OS          : Linux
 
@@ -1807,6 +1809,12 @@ full cjk unicode range returned in a seq<pre class="listing"><span class="Keywor
 <span class="Identifier">echo</span><span class="Punctuation">(</span><span class="Punctuation">)</span></pre>
 
 </dd>
+<a id="createSeqFractur,"></a>
+<dt><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqFractur</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
+<dd>
+createSeqFracture Fractur chars returned in a seq
+
+</dd>
 <a id="createSeqIching,"></a>
 <dt><pre><span class="Keyword">proc</span> <span class="Identifier">createSeqIching</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span><span class="Other">{</span><span class="Other pragmadots">...</span><span class="Other">}</span></span><span class="pragmawrap"><span class="Other">{.</span><span class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></span><span class="Other">.}</span></span></pre></dt>
 <dd>
@@ -2031,7 +2039,7 @@ reverse iterator<pre class="listing"><span class="Keyword">let</span> <span clas
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2018-12-15 07:09:49 UTC</small>
+        <small>Made with Nim. Generated: 2018-12-18 12:52:16 UTC</small>
       </div>
     </div>
   </div>
